# gsd-econ

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GETTING-STARTED.md  INSTALL.md  LICENSE  Makefile  README.md  VERIFICATION.md  install.sh  pyproject.toml
agents/: econ-researcher.md  econometrician.md  identification-checker.md  multiverse-reporter.md  polish-citations.md  polish-claims.md  polish-consistency.md  polish-cross-refs.md  polish-numbers.md  referee-deliberator.md  referee-sim-light.md  referee-sim.md  replication-verifier.md  tables-figures-builder.md
commands/: gsd-discuss-identification.md  gsd-multiverse.md  gsd-new-paper.md  gsd-plan-empirics.md  gsd-polish-pass.md  gsd-pre-register.md  gsd-referee-sim.md  gsd-rr-response.md  gsd-submit-paper.md  gsd-tables-figures.md  gsd-test-paper.md  gsd-verify-replication.md
config/: config.json.example  settings.json.example
docs/: adapting-gsd.md  adopting-mid-project.md  architecture.md  meta-cognition.md  model-tiers.md  multiverse-tutorial.md  multiverse.md  related-work.md  verification-flow.md  writing-tests.md
rules/: data-handling.md  decision-logging.md  file-discipline.md  git-discipline.md  identification.md  manuscript-discipline.md  methodology-integrity.md  preregistration.md  uncertainty-honesty.md
scripts/: apply-models-config.py  multiverse_runner.py  pick-models-interactive.py  run-tests.sh  transform-agent-frontmatter.py
templates/: METHODOLOGY.md.template  PHASE-CONTEXT.md.template  PROJECT.md.template  REQUIREMENTS.md.template  ROADMAP.md.template  (+1 more)
(+55 files in other folders)
